--- a/html 요소 수정/last_week.html
+++ b/html 요소 수정/last_week.html
@@ -25,6 +25,53 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+    	.circle{
+    		width:55px;
+    		height:55px;
+    		border-radius:50%;
+    		background: #00d3d3;
+    		text-align: center;
+    		line-height: 55px;
+    		font-size: 36px;
+    	}
+    	table {
+		  border-collapse: separate;
+		  border-spacing: 2px;
+		 }
+		 @media (min-width: 763px) and (max-width: 991px){
+		.circle{
+    		width:35px;
+    		height:35px;
+    		border-radius:50%;
+    		background: #00d3d3;
+    		text-align: center;
+    		line-height: 35px;
+    		font-size: 20px;
+    	}
+   		table {
+		  border-collapse: separate;
+		  border-spacing: 2px;
+		 }
+
+ 		 }	
+ 		  @media (min-width: 992px) and (max-width: 1199px){
+		.circle{
+    		width:45px;
+    		height:45px;
+    		border-radius:50%;
+    		background: #00d3d3;
+    		text-align: center;
+    		line-height: 40px;
+    		font-size: 30px;
+    	}
+   		table {
+		  border-collapse: separate;
+		  border-spacing: 3px;
+		 }
+
+ 		 }
+    </style>
   </head>
   <body class="goto-here">
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -112,20 +159,86 @@
 
     <section class="ftco-section ftco-no-pb ftco-no-pt bg-light">
 			<div class="container">
-				<div class="row">
+				<div class="row" style="justify-content: center">
 					<div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/about.jpg);">
-						<h3 class="heading"style="color : #ffffff">987th 당첨번호</h3>						
+						<dl>
+							<dt></dt>
+							<dd>
+								<table>
+									<tr>
+										<td colspan = "7"><h3 class = "heading">987th 당첨번호</h3></td>
+									</tr>
+									<tr>
+										<td><div class = "circle">3</div></td>
+										<td><div class = "circle">7</div></td>
+										<td><div class = "circle">6</div></td>
+										<td><div class = "circle">5</div></td>
+										<td><div class = "circle">4</div></td>
+										<td><div class = "circle">3</div></td>
+										<td><div class = "circle">2</div></td>										
+									</tr>
+								</table>
+							</dd>
+						</dl>					
 					</div> 
-					<div class="col-md-7 py-5 wrap-about pb-md-5 ftco-animate">
-	          <div class="heading-section-bold mb-4 mt-md-5">
+				<div class="col-md-7 py-5 wrap-about pb-md-5 ftco-animate">
+	 	          <div class="heading-section-bold mb-4 mt-md-5">
 	          	<div class="ml-md-0">
-		        <h2 class="mb-4">지난주 통계 추천 번호</h2>
-		        <span>1st</span>
+	          	<dl>
+	          	<dt></dt>
+	          	<dd>
+	          	<table>
+	          	<tr>
+		        	<td colspan="7"><h2 class="mb-4" style ="font-size: 26px;">지난주 통계 추천 번호</h2></td>
+		        </tr>
+		        <tr>
+		        	<td></td>
+		        	<td></td>
+		        	<td></td>
+		        	<td></td>
+		        	<td></td>
+		        	<td></td>
+		        	<td></td>
+		        </tr>
+		        <tr>
+		        	<td><span>1st</span></td>
+		        </tr>
+		        <tr>
+		        	<td><span>2rd</span></td>
+		        </tr>
+		        <tr>
+		        	<td><span>3th</span></td>
+		        </tr>
+		        <tr>
+		        	<td><span>4th</span></td>
+		        </tr>
+		        <tr>
+		        	<td><span>5th</span></td>
+		        </tr>
+		        <tr>
+		        	<td><span>6th</span></td>
+		        </tr>
+		        <tr>
+		        	<td><span>7th</span></td>
+		        </tr>
+		        <tr>
+		        	<td><span>8th</span></td>
+		        </tr>
+		        <tr>
+		        	<td><span>9th</span></td>
+		        </tr>
+		        <tr>
+		        	<td><span>10th</span></td>
+		        </tr>
+		        
+	          	</table>
+	          	</dd>
+	          	</dl>
 	            </div>
 	          </div>
 			        </div>
-				</div>
-			</div>
+				</div> 
+			</div> 
 		</section>
 
 <!-- 
